# mcp-ollama

./: README.md  code-review.md  improvements.md  main.py  pyproject.toml
_aidocs/: mcp_docs.txt
